# avr-hal

./: Cargo.toml  README.md  crates.js  search-index.js  source-files.js
.github/workflows/: ci.yml
arduino_hal/: all.html  index.html  macro.default_serial.html  macro.pins.html  sidebar-items.js
arduino_hal/adc/: trait.AdcChannel.html  trait.AdcOps.html
arduino_hal/eeprom/: index.html  (+3 more)
atmega_hal/: all.html  index.html  macro.pins.html  sidebar-items.js  struct.Atmega.html  struct.Peripherals.html
attiny_hal/: all.html  index.html  macro.pins.html  sidebar-items.js  struct.Attiny.html  struct.Peripherals.html
avr_device/: all.html  index.html  sidebar-items.js
avr_device_macros/: index.html
avr_hal_generic/: all.html  index.html  macro.impl_adc.html  macro.impl_eeprom_atmega.html  macro.impl_eeprom_atmega_old.html  macro.impl_eeprom_attiny.html  macro.impl_eeprom_common.html  macro.impl_wdt.html  sidebar-items.js
embedded_storage/: all.html  index.html  trait.ReadStorage.html  trait.Region.html  trait.Storage.html
examples/: README.md
examples/digispark/: Cargo.toml
micronucleus-runner/: Cargo.toml  README.md
micronucleus-runner/src/: main.rs
paste/: index.html
proc_macro2/: enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
proc_macro_hack/: attr.proc_macro_hack.html  index.html
quote/: index.html
syn/: index.html  struct.Ident.html
unicode_ident/: index.html
(+2667 files in other folders)
