[package]
name = "digispark-examples"
version = "0.0.0"
authors = ["Jan Paw <jpaw@virtuslab.com>", "Reinout Heeck <reinz@desk.org>"]
edition = "2018"
publish = false

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.7"

[dependencies.arduino-hal]
path = "../../arduino-hal/"
features = ["trinket"]
